--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <button class="btn btn-outline-secondary me-2"><img width="20" height="20"
                             src="https://img.icons8.com/ios/50/like--v1.png" alt="like--v1" /></button>
                     <button class="btn btn-outline-secondary position-relative">
+                        <a class="nav-link" href="checkout.html"></a>
                         <img width="20" height="20" src="https://img.icons8.com/ios/50/bag-front-view.png"
                             alt="bag-front-view" />
                         <span id="bag-amount"
