--- a/shop.html
+++ b/shop.html
@@ -33,9 +33,9 @@
                     <button class="btn btn-outline-secondary me-2"><img width="20" height="20"
                             src="https://img.icons8.com/ios/50/like--v1.png" alt="like--v1" /></button>
                     <button class="btn btn-outline-secondary position-relative">
-                        <a class="nav-link" href="checkout.html"></a>
-                        <img width="20" height="20" src="https://img.icons8.com/ios/50/bag-front-view.png"
-                            alt="bag-front-view" />
+                    <button class="btn btn-outline-secondary position-relative">
+                        <a href="checkout.html"><img width="20" height="20" src="https://img.icons8.com/ios/50/bag-front-view.png"
+                            alt="bag-front-view"/></a>
                         <span id="bag-amount"
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
                     </button>
